--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,7 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "FORCE_TORCHRUN": "true",
-                "PATH": "/opt/miniconda/envs/llama39/bin:${env:PATH}"
+                "PATH": "/opt/miniconda/envs/llama39/bin:${env:PATH}" // which torchrun 找到的路径, 否则 process = subprocess.run 找不到命令会报错
                 // "PYTHONPATH": "${workspaceFolder}",
                 // "CUDA_VISIBLE_DEVICES" : "0"
                 // "PYTHONWARNINGS": "ignore"
