--- a/.vscode/launch-cli.py.json
+++ b/.vscode/launch-cli.py.json
@@ -10,18 +10,21 @@
             "name": "Python: Current File",
             "type": "debugpy",
             "request": "launch",
-            "module": "llamafactory.cli",
-            // "program": "${workspaceFolder}/src/llamafactory/cli.py",
+            // "module": "llamafactory.cli",
+            "program": "${workspaceFolder}/run-debug.py",
             "args": [
-                "train", 
-                "examples/train_lora/llama3_lora_sft_ds3.yaml",
+                // "train", 
+                // "examples/train_lora/llama3_lora_sft_ds3.yaml",
             ],
-            "cwd": "${workspaceFolder}/src",
+            "cwd": "${workspaceFolder}",
             "env": {
+                "FORCE_TORCHRUN": "true",
+                "PATH": "/opt/miniconda/envs/llama39/bin:${env:PATH}" 
                 // "PYTHONPATH": "${workspaceFolder}",
                 // "CUDA_VISIBLE_DEVICES" : "0"
                 // "PYTHONWARNINGS": "ignore"
             },
+            "subProcess": true,
             "console": "integratedTerminal",
             "justMyCode": false // 允许调试库代码
         }
