--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,15 +13,17 @@
             "program": "/usr/local/miniconda3/envs/llama39/bin/torchrun",  // torchrun 的完整路径
             "args": [
                 "/root/datav/nlp/LLama-Factory-annotations/train-integrate.py",  // 脚本路径
+                // "/root/datav/nlp/LLama-Factory-annotations/train-100.py",  // 脚本路径
+
             ],
             "cwd": "${workspaceFolder}",
             "env": {
 
-                "PATH": "/usr/local/miniconda3/envs/llama39/bin:${env:PATH}" 
+                // "PATH": "/usr/local/miniconda3/envs/llama39/bin:${env:PATH}" 
             },
             "subProcess": true,
             "console": "integratedTerminal",
-            "justMyCode": false // 允许调试库代码
+            "justMyCode": true // 允许调试库代码
         }
     ]
 }
